fixed btn on hover on Safari

--- a/css/main.css
+++ b/css/main.css
@@ -181,7 +181,9 @@ footer li a {
 	width: 48%;
 }
 .btn-gradient-border2:hover {
-	background: linear-gradient(to right, rgba(182, 151, 246) , rgba(98, 217, 231));
+	background: #62d9e7;
+	border-color: #b697f6;
+	background: linear-gradient(to right, #b697f6 , #62d9e7);
 	text-decoration: none;
 	-webkit-text-fill-color: #fff;
 }
@@ -194,7 +196,7 @@ iframe {
 	width: 100%;
 	height: 260px;
 }
-.headerImg iframe {
+.headerImg iframe, .videoFolow iframe {
 	height: 520px;
 }
 .folow {
@@ -208,6 +210,7 @@ iframe {
 .videoFolow {
 	text-align: center;
 	padding: 20px 0 0;
+	height: 520px;
 }
 .videoFolow h2 {
 	padding-bottom: 20px;
@@ -300,7 +303,11 @@ iframe {
     appearance: none;
     width: 10px;
     height: 20px;
-    background: linear-gradient(to right, rgba(182, 151, 246) , rgba(98, 217, 231));
+		background-image: -webkit-gradient(linear, left, right, from rgba(182, 151, 246, 0.86) , to rgba(98, 217, 231, 0.86));
+		background-image: -webkit-linear-gradient(left, rgba(182, 151, 246, 0.86) , rgba(98, 217, 231, 0.86));
+		background-image: -moz-linear-gradient(right, rgba(182, 151, 246, 0.86) , rgba(98, 217, 231, 0.86));
+		background-image: -o-linear-gradient(right, rgba(182, 151, 246, 0.86) , rgba(98, 217, 231, 0.86));
+		background-image: linear-gradient(to right, rgba(182, 151, 246, 0.86) , rgba(98, 217, 231, 0.86));
     cursor: pointer;
 }
 
